--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5866388935973588"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -175,4 +177,5 @@
 
     <script src="/js/main.js"></script>
 </body>
+
 </html>
