--- a/public/freelancer-detail.html
+++ b/public/freelancer-detail.html
@@ -6,6 +6,8 @@
     <title>Professional Profile - LocalPro</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5866388935973588"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -38,4 +40,5 @@
 
     <script src="/js/freelancer-detail.js"></script>
 </body>
+
 </html>
