--- a/public/admin.html
+++ b/public/admin.html
@@ -6,6 +6,8 @@
     <title>Admin Panel - LocalPro</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5866388935973588"
+     crossorigin="anonymous"></script>
 </head>
 <body class="admin-body">
     <!-- Admin Login -->
@@ -175,4 +177,5 @@
 
     <script src="/js/admin.js"></script>
 </body>
+
 </html>
