--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5866388935973588"
      crossorigin="anonymous"></script>
+    <title>LocalPro – Find Trusted Local Professionals & Freelancers Near You</title>
+
+<meta name="description" content="LocalPro helps you find trusted local professionals and freelancers by city and skill. Hire verified experts including developers, designers, marketers and service providers near you.">
+
+<meta name="keywords" content="local professionals,local services,local freelancers,freelancers near me,hire freelancer,hire local professional,localpro,professional services near me,freelance services,freelancers in india,indian freelancers,find freelancers,search freelancers,verified freelancers,trusted professionals,hire experts,local experts,nearby professionals,city wise freelancers,freelancers by city,freelancers by skill,online hiring platform,service marketplace,local service provider,best freelancers,top freelancers,skilled professionals,experienced freelancers,affordable freelancers,cheap freelancers india,remote freelancers,on demand services,home services,business services,tech freelancers,web developer freelancer,frontend developer,backend developer,full stack developer,mern stack developer,react developer,node js developer,javascript developer,python developer,java developer,php developer,wordpress developer,shopify developer,app developer,android developer,ios developer,mobile app developer,software developer,ui ux designer,graphic designer,logo designer,banner designer,video editor,photo editor,content writer,blog writer,seo expert,seo freelancer,digital marketer,social media marketer,ads expert,google ads specialist,facebook ads expert,email marketer,copywriter,proofreader,data analyst,data entry operator,virtual assistant,customer support freelancer,it support services,cloud engineer,devops engineer,aws expert,azure expert,gcp expert,ai developer,chatbot developer,automation expert,api developer,web scraping expert,testing services,ecommerce website developer,payment gateway integration,freelancer marketplace india,service booking platform,professional directory,local business directory,near me services website,instant hiring platform,verified service providers,localpro platform">
+
+<meta name="robots" content="index, follow">
+<meta name="author" content="LocalPro">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="canonical" href="https://localpro-nr7s.onrender.com/" />
+
+<!-- OPEN GRAPH -->
+<meta property="og:title" content="LocalPro – Find Trusted Local Professionals">
+<meta property="og:description" content="Hire verified freelancers and local professionals by city and skill on LocalPro.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://localpro-nr7s.onrender.com/">
+<meta property="og:image" content="https://localpro-nr7s.onrender.com/og-image.png">
+
+<!-- TWITTER -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="LocalPro – Find Trusted Local Professionals">
+<meta name="twitter:description" content="Find freelancers and professionals near you with LocalPro.">
+<meta name="twitter:image" content="https://localpro-nr7s.onrender.com/og-image.png">
+
 </head>
 <body>
     <!-- Navigation -->
@@ -179,3 +204,4 @@
 </body>
 
 </html>
+
