--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="wvy5wT6SA_bmGYTxvoHC865paxl3Zfi3aVbEGVXW86U" />
     <title>LocalPro - Find Local Professionals Near You</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -218,5 +219,6 @@
 </body>
 
 </html>
+
 
 
